apps/jjinbbang-admin/overlays/dev/web-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jjinbbang-admin-web
spec:
  replicas: 1
