apps/jjinbbang-admin/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jjinbbang-admin
spec:
  tls:
    - hosts:
        - dev.admin.jjinbbang.kr
      secretName: jjinbbang-admin-dev-public-tls
  rules:
    - host: dev.admin.jjinbbang.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jjinbbang-admin-server
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: jjinbbang-admin-server
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: jjinbbang-admin-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jjinbbang-admin-web
                port:
                  number: 8080
